--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.9"
 
 services:
   # Database
@@ -8,12 +8,17 @@ services:
       - db_data:/var/lib/mysql
     restart: always
     environment:
+      MYSQL_TCP_PORT: ${MYSQL_TCP_PORT}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     networks:
       - wpsite
+    ports:
+      - 3307:3307
+    command: --default-authentication-plugin=mysql_native_password
+
   # phpmyadmin
   phpmyadmin:
     depends_on:
@@ -21,9 +26,9 @@ services:
     image: phpmyadmin/phpmyadmin
     restart: always
     ports:
-      - "${PMA_PORT}:80"
+      - ${PMA_PORT}:80
     environment:
-      PMA_HOST: db
+      PMA_HOST: db:3307
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     networks:
       - wpsite
@@ -33,14 +38,14 @@ services:
       - db
     image: wordpress:latest
     ports:
-      - "${WP_PORT}:80"
+      - ${WP_PORT}:80
     restart: always
     volumes: 
-      - "./wordpress/:/var/www/html" #Full wordpress project
+      - "wordpress/:/var/www/html" #Full wordpress project
       #- ./plugin-name/:/var/www/html/wp-content/plugins/plugin-name # Plugin development
       #- ./theme-name/:/var/www/html/wp-content/themes/theme-name # Theme development
     environment:
-      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_HOST: ${WORDPRESS_DB_HOST}
       WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
       WORDPRESS_DB_USER: ${MYSQL_USER}
       WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
@@ -50,3 +55,4 @@ networks:
   wpsite:
 volumes:
   db_data:
+  wordpress:
